[package]
name = "module-path"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "very suitable module names, compressed using a prefix tree"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
radix-tree = "0.2.0"

[dev-dependencies]

[features]
default = []
