[package]
name = "nyar-string"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "String pool with GC optimization"
repository = "https://github.com/nyar-vm/nyar-string"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
ahash = "0.8.3"
compact_str = "0.7.0"

[dev-dependencies]

[features]
default = []
